Bug 631068 - Accessible recreation breaks relations, r=davidb, a=final+